# agent-racing-os

./: .gitignore  AGENT_PROTOCOL.md  GOAL.md  README.md  ROADMAP.md  STATE.md  pyproject.toml
agentos/: __init__.py  cli.py  config.py  context_packet.py  daemon.py  domain_memory.py  event_log.py  gitops.py  orchestrator.py  reviewer_runner.py  state_machine.py  worker_runner.py
docs/superpowers/plans/: 2026-06-20-agent-racing-os-implementation.md
docs/superpowers/specs/: 2026-06-20-agent-racing-os-design.md
domains/agent_os/: DOMAIN.md  EXPERIMENTS.md
domains/loading/: DOMAIN.md  EXPERIMENTS.md
domains/rendering/: DOMAIN.md  EXPERIMENTS.md
domains/traffic/: DOMAIN.md  EXPERIMENTS.md
domains/ui_tooling/: DOMAIN.md  EXPERIMENTS.md
domains/vehicle_feel/: DOMAIN.md  EXPERIMENTS.md
domains/world_pipeline/: DOMAIN.md  EXPERIMENTS.md
game/: README.md
ops/: env.example  vps_bootstrap.sh
ops/systemd/: agent-racing-os.service
prompts/: memory_compactor.md  orchestrator.md  reviewer.md  stuck.md  worker.md
runs/: run-0001.md  run-0002.md
tests/: test_context_packet.py  test_event_log.py  test_orchestrator.py  test_packaging.py  test_vps_bootstrap.py
