[project]
name = "agent-racing-os"
version = "0.1.0"
description = "VPS orchestration layer for autonomous strategic progress on a UE5 Gaussian-splat racing game."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentos = "agentos.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

